# skill-post-market-screener

./: .env.example  .gitignore  OPERATION_MANUAL.md  README.md  SKILL.md  config.json  mcp_server.py  pyproject.toml  requirements.txt  run.py
.claude/: mcp.json
agents/: cursor-rule.mdc  openai.yaml  portable-loader.md
core/: cache.py  data_fetcher.py  flow_fetcher.py  flow_filter.py  mock_data.py  pattern_detector.py  pipeline.py  portfolio.py  reporter.py  scorer.py
llm/: analyst.py
references/: pandadata-map.md  pattern-formulas.md  report-template.md  validate-rules.md
scripts/: analyze_weights.py  benchmark.py  daily_screener.bat  fetch_real_cache.py  make_zip.py  validate_screener.py
tests/: test_analyst.py  test_api_integration.py  test_integration.py  test_pattern_detector.py  test_reporter.py
